# telegram-audio-dl

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: credenciales-telegram.md  escenarios.md
scripts/: com.telegram-audio-dl.plist  telegram-audio-dl.service
src/telegram_audio_dl/: __main__.py  cli.py  client.py  config.py  daemon.py  database.py  download_manager.py  downloader.py  entrypoint.py  ipc.py  logging_setup.py  metadata.py  player.py  state.py
tests/: ._test_config.py  _db_helpers.py  conftest.py  test_audio_player_detection.py  test_cli_format.py  test_client_pure.py  test_config.py  test_daemon_session_tuning.py  test_downloader_pure.py  test_entrypoint.py  test_history_and_player.py  test_inventory_and_manager.py  test_ipc.py  test_library.py  test_logging_setup.py  test_metadata_and_format.py  test_paginated_select.py  test_pagination.py  test_pending.py  test_player_session.py  test_scenarios.py  test_state.py  test_streaming.py
tools/: kickoff_downloads.py  migrate_json_to_sqlite.py
